[MODINVOSTO-166] - Update to Java 17 mod-invoice-storage (#156)